@@ -488,13 +488,15 @@ comment|// name is already UTF-8 encoded
 name|String
 name|column
 init|=
+name|Bytes
+operator|.
+name|toString
+argument_list|(
 name|entry
 operator|.
 name|getKey
 argument_list|()
-operator|.
-name|toString
-argument_list|()
+argument_list|)
 decl_stmt|;
 name|byte
 index|[]
@@ -580,14 +582,11 @@ name|Field
 argument_list|(
 name|column
 argument_list|,
-operator|new
-name|String
+name|Bytes
+operator|.
+name|toString
 argument_list|(
 name|columnValue
-argument_list|,
-name|HConstants
-operator|.
-name|UTF8_ENCODING
 argument_list|)
 argument_list|,
 name|store
